# mario

./: .gitignore  README.md  conf.yaml  main.py  pyproject.toml
cfg/: miniwdl.cfg
inputs/: 1.json  2.json
src/mario/: __init__.py
wdl/: hello.wdl
