[project]
name = "mario"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "giuliovn", email = "giuliovnturi@gmail.com" }
]
dependencies = [
    "miniwdl>=1.12.0",
    "wdl-aid==1.0.0",
    "boto3>=1.34.110",
    "mysql-connector-python>=8.4.0",
    "winval>=0.7.0",
    "shellcheck-py>=0.10.0.1",
    "hydra-core @ git+https://github.com/facebookresearch/hydra.git",
    "cromshell>=2.1.1",
    "gitpython>=3.1.43",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pydantic>=2.7.1",
    "pytest>=8.2.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mario"]
